--- a/style.css
+++ b/style.css
@@ -1,24 +1,124 @@
-body{
-    background-color: whitesmoke;    
+/* Estilos generales */
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
 }
 
-h2{
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+/* Estilos para el formulario */
+h2 {
+    font-size: 24px;
+    color: #333;
     text-align: center;
 }
 
-#nominaForm{
+#nominaForm {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+}
 
+label {
+    font-weight: bold;
+    color: #555;
+}
+
+input[type="text"],
+input[type="number"],
+input[type="radio"] {
+    width: 100%;
+    padding: 10px;
+    margin: 5px 0;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    font-size: 16px;
+}
+
+button[type="submit"] {
+    background-color: #007BFF;
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+button[type="submit"]:hover {
+    background-color: #0056b3;
+}
+
+/* Estilos para la tabla de registros */
+h2 {
+    font-size: 24px;
+    color: #333;
+    margin-top: 20px;
+}
+
+#nominaTable {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 10px;
+}
+
+#nominaTable th,
+#nominaTable td {
+    border: 1px solid #ddd;
+    padding: 8px;
     text-align: center;
 }
 
-.edit-button{
+#nominaTable th {
+    background-color: #007BFF;
     color: #fff;
-    background-color: blue;
-
 }
 
-.delete-button{
-    color: #fff;
-    background-color: red;
+#nominaTable tbody tr:nth-child(even) {
+    background-color: #f2f2f2;
 }
 
+/* Estilos para dispositivos móviles */
+@media screen and (max-width: 600px) {
+    #nominaForm,
+    #nominaTable {
+        margin: 0;
+        padding: 10px;
+    }
+
+    input[type="text"],
+    input[type="number"],
+    input[type="radio"],
+    button[type="submit"] {
+        width: 100%;
+        margin: 5px 0;
+    
+    }
+
+    #nominaTable {
+        margin-top: 0;
+    }
+}
+
+/* Estilos para tablets y pantallas más grandes */
+@media screen and (min-width: 601px) {
+    .container {
+        padding: 40px;
+    }
+
+    #nominaForm {
+        width: 60%;
+        margin: 0 auto;
+    }
+
+    #nominaTable {
+        margin-top: 20px;
+    }
+}
